sas-core/main/default/objects/GDPRExtractObjectSetting__mdt/GDPRExtractObjectSetting__mdt.object-meta.xml
<CustomObject>
    <description>Used to determine which objects to include in GDPR extract and how those objects should be related.</description>
    <label>GDPR Extract Object Setting</label>
    <pluralLabel>GDPR_Extract Object Settings</pluralLabel>
</CustomObject>