sas-core/main/default/objects/GDPRExtractObjectSetting__mdt/fields/AccountIdFieldName__c.field-meta.xml
<CustomField>
    <fullName>AccountIdFieldName__c</fullName>
    <description>The developer name of the field on this object that relates to to an account, e.g. AccountId. Should be set only if the object should be included as a standalone object, and not listed as child to another object.</description>
    <inlineHelpText>The developer name of the field on this object that relates to to an account, e.g. AccountId. Should be set only if the object should be included as a standalone object, and not listed as child to another object.</inlineHelpText>
    <label>Account Id Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>