sas-core/main/default/objects/GDPRExtractObjectSetting__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>Developer name of object to include</description>
    <inlineHelpText>Developer name of object to include</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>