sas-core/main/default/objects/GDPRExtractObjectSetting__mdt/fields/ParentObjectName__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectName__c</fullName>
    <description>Indicates that the object selected in the Object field on this metadata record should be included as a child to this object. If a value is set in this field, no value should be provided for the Account Identifier field.</description>
    <inlineHelpText>Indicates that the object selected in the Object field on this metadata record should be included as a child to this object. If a value is set in this field, no value should be provided for the Account Identifier field.</inlineHelpText>
    <label>Parent Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>