sas-core/main/default/objects/GDPRExtractObjectSetting__mdt/fields/RelationshipName__c.field-meta.xml
<CustomField>
    <fullName>RelationshipName__c</fullName>
    <description>The name of the relationship to the Parent Object, if the value is set. The relationship name can be found on the field on the field definition on the Child Object that relates to the Parent Object.</description>
    <inlineHelpText>The name of the relationship to the Parent Object, if the value is set. The relationship name can be found on the field on the field definition on the Child Object that relates to the Parent Object.</inlineHelpText>
    <label>Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>