sas-core/main/default/objects/GDPRExtractObjectSetting__mdt/validationRules/Must_provide_Parent_or_Account_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_provide_Parent_or_Account_Id</fullName>
    <active>true</active>
    <description>Asserts that the user provides either a Parent Object or Account Identifier, and not both values.</description>
    <errorConditionFormula>OR(AND(ISBLANK(AccountIdFieldName__c), ISBLANK( ParentObjectName__c)), AND(NOT(ISBLANK(AccountIdFieldName__c)), NOT(ISBLANK(ParentObjectName__c))))</errorConditionFormula>
    <errorMessage>You must provide either the Account Identifier field or a Parent Object. Both values cannot be set.</errorMessage>
</ValidationRule>