sas-core/main/default/objects/GDPRExtractObjectSetting__mdt/listViews/All_settings.listView-meta.xml
<ListView>
    <fullName>All_settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ObjectName__c</columns>
    <columns>AccountIdFieldName__c</columns>
    <columns>ParentObjectName__c</columns>
    <columns>RelationshipName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All settings</label>
    <language>en_US</language>
</ListView>